--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www & node apiServer.js"
   },
   "devDependencies": {
     "nodemon": "^1.12.1",
@@ -14,6 +14,7 @@
     "webpack": "^2.7.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -30,6 +31,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.4",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.4.5"
   }
 }
